--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-table": "^7.8.0",
     "reactstrap": "^9.1.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
