--- a/back/kwcommunity/src/main/resources/application.properties
+++ b/back/kwcommunity/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url: jdbc:mariadb://database-1.cabyfijfdu1k.us-east-1.rds.amazonaws.com:3306/kwcommu
-spring.datasource.username: root
-spring.datasource.password: dnpqtjfrn1
+spring.datasource.username: kwic
+spring.datasource.password: 1234
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
