--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,7 @@
   "name": "teamproject-team-1",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://52.44.107.157:8080",
   "dependencies": {
     "-": "^0.0.1",
     "@reduxjs/toolkit": "^1.9.0",
