--- a/front/package.json
+++ b/front/package.json
@@ -11,9 +11,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.2",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.4.0",
     "react-js-pagination": "^3.0.3",
     "react-redux": "^8.0.5",
